fix: typo in the not found page

--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -5,7 +5,7 @@ import DefaultLayout from "@/layouts/DefaultLayout.astro"
 <DefaultLayout>
   <section>
     <h3>
-      <b>Page:</b> [...404].vue
+      <b>Page:</b> 404.astro
     </h3>
 
     <hr class="hr">
