style(prettier): run Prettier to clean up code formatting

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -3,15 +3,19 @@
 ---
 
 <nav class="navigation">
-  <h1 class="navigation-logo">
-    <a href="/" class="navigation-logo-link">astro-template</a>
-  </h1>
-  <ul class="navigation-list">
-    <li>
-      <a href="/">Home</a>
-    </li>
-    <li>
-      <a href="/404">Not Found</a>
-    </li>
-  </ul>
+    <h1 class="navigation-logo">
+        <a
+            href="/"
+            class="navigation-logo-link"
+            >astro-template</a
+        >
+    </h1>
+    <ul class="navigation-list">
+        <li>
+            <a href="/">Home</a>
+        </li>
+        <li>
+            <a href="/404">Not Found</a>
+        </li>
+    </ul>
 </nav>
