--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,20 +1,21 @@
 ---
-import DefaultLayout from "~/layouts/Default.astro"
+import DefaultLayout from '~/layouts/Default.astro';
 ---
 
 <DefaultLayout>
-  <section>
-    <h3>
-      <b>Page:</b> 404.astro
-    </h3>
+    <section>
+        <h3>
+            <b>Page:</b> 404.astro
+        </h3>
 
-    <hr class="hr">
+        <hr class="hr" />
 
-    <h4>
-      <b>404 Not Found</b>
-    </h4>
-    <p>
-      The HTTP 404 Not Found response status code indicates that the server cannot find the requested resource.
-    </p>
-  </section>
+        <h4>
+            <b>404 Not Found</b>
+        </h4>
+        <p>
+            The HTTP 404 Not Found response status code indicates that the
+            server cannot find the requested resource.
+        </p>
+    </section>
 </DefaultLayout>
