--- a/src/components/Global/Head.astro
+++ b/src/components/Global/Head.astro
@@ -1,14 +1,14 @@
 ---
 const {
-  title,
-  description,
-  keywords,
-  url,
-  image,
-  imageAlt,
-  twitterCreator,
-  twitterSite,
-  twitterCreatorId,
+    title,
+    description,
+    keywords,
+    url,
+    image,
+    imageAlt,
+    twitterCreator,
+    twitterSite,
+    twitterCreatorId
 } = Astro.props;
 ---
 
@@ -16,80 +16,159 @@ const {
 
 <title>{title}</title>
 
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=3" />
-
-<meta name="application-name" content={title} />
-<meta name="description" content="{description}" />
-<meta name="keywords" content={keywords} />
-<meta name="referrer" content="origin-when-cross-origin" />
-<meta name="color-scheme" content="dark light" />
 <meta
-  name="format-detection"
-  content="telephone=no, address=no, email=no"
+    name="viewport"
+    content="width=device-width, initial-scale=1, maximum-scale=3"
 />
 
 <meta
-  name="theme-color"
-  media="(prefers-color-scheme: light)"
-  content="white"
+    name="application-name"
+    content={title}
 />
 <meta
-  name="theme-color"
-  media="(prefers-color-scheme: dark)"
-  content="black"
+    name="description"
+    content="{description}"
+/>
+<meta
+    name="keywords"
+    content={keywords}
+/>
+<meta
+    name="referrer"
+    content="origin-when-cross-origin"
+/>
+<meta
+    name="color-scheme"
+    content="dark light"
+/>
+<meta
+    name="format-detection"
+    content="telephone=no, address=no, email=no"
 />
 
-<meta property="og:title" content={title} />
 <meta
-  property="og:description"
-  content={description}
+    name="theme-color"
+    media="(prefers-color-scheme: light)"
+    content="white"
 />
-<meta property="og:url" content={url} />
-<meta property="og:site_name" content={title} />
-<meta property="og:locale" content="en-US" />
 <meta
-  property="og:image:url"
-  content={image}
-/>
-<meta property="og:image:width" content="1800" />
-<meta property="og:image:height" content="1600" />
-<meta property="og:image:alt" content={imageAlt} />
-<meta property="og:type" content="website" />
-
-<meta name="twitter:site" content={twitterSite} />
-<meta name="twitter:creator" content={twitterCreator} />
-<meta name="twitter:creator:id" content={twitterCreatorId} />
-<meta name="twitter:title" content={title} />
-<meta
-  name="twitter:description"
-  content={description}
-/>
-<meta name="twitter:card" content="app" />
-<meta
-  name="twitter:image"
-  content={image}
-/>
-<meta property="twitter:image:width" content="1800" />
-<meta property="twitter:image:height" content="1600" />
-<meta name="twitter:image:alt" content={imageAlt} />
-
-<meta name="robots" content="noindex, follow, nocache" />
-<meta
-  name="googlebot"
-  content="index, nofollow, noimageindex, max-video-preview:-1, max-image-preview:large, max-snippet:-1"
+    name="theme-color"
+    media="(prefers-color-scheme: dark)"
+    content="black"
 />
 
-<link rel="manifest" href="/manifest.webmanifest" />
+<meta
+    property="og:title"
+    content={title}
+/>
+<meta
+    property="og:description"
+    content={description}
+/>
+<meta
+    property="og:url"
+    content={url}
+/>
+<meta
+    property="og:site_name"
+    content={title}
+/>
+<meta
+    property="og:locale"
+    content="en-US"
+/>
+<meta
+    property="og:image:url"
+    content={image}
+/>
+<meta
+    property="og:image:width"
+    content="1800"
+/>
+<meta
+    property="og:image:height"
+    content="1600"
+/>
+<meta
+    property="og:image:alt"
+    content={imageAlt}
+/>
+<meta
+    property="og:type"
+    content="website"
+/>
+
+<meta
+    name="twitter:site"
+    content={twitterSite}
+/>
+<meta
+    name="twitter:creator"
+    content={twitterCreator}
+/>
+<meta
+    name="twitter:creator:id"
+    content={twitterCreatorId}
+/>
+<meta
+    name="twitter:title"
+    content={title}
+/>
+<meta
+    name="twitter:description"
+    content={description}
+/>
+<meta
+    name="twitter:card"
+    content="app"
+/>
+<meta
+    name="twitter:image"
+    content={image}
+/>
+<meta
+    property="twitter:image:width"
+    content="1800"
+/>
+<meta
+    property="twitter:image:height"
+    content="1600"
+/>
+<meta
+    name="twitter:image:alt"
+    content={imageAlt}
+/>
+
+<meta
+    name="robots"
+    content="noindex, follow, nocache"
+/>
+<meta
+    name="googlebot"
+    content="index, nofollow, noimageindex, max-video-preview:-1, max-image-preview:large, max-snippet:-1"
+/>
 
 <link
-  rel="shortcut icon"
-  href="/favicons/astro-favicon.svg"
-  type="svg+xml"
+    rel="manifest"
+    href="/manifest.webmanifest"
 />
-<link rel="icon" href="/favicons/astro-favicon.svg" type="svg+xml" />
+
 <link
-  rel="apple-touch-icon"
-  sizes="180x180"
-  href="/favicons/astro-apple-touch.svg"
+    rel="shortcut icon"
+    href="/favicons/astro-favicon.svg"
+    type="svg+xml"
 />
-<link rel="sitemap" href="/sitemap-index.xml" />
+<link
+    rel="icon"
+    href="/favicons/astro-favicon.svg"
+    type="svg+xml"
+/>
+<link
+    rel="apple-touch-icon"
+    sizes="180x180"
+    href="/favicons/astro-apple-touch.svg"
+/>
+<link
+    rel="sitemap"
+    href="/sitemap-index.xml"
+/>
