--- a/src/components/Global/Head.astro
+++ b/src/components/Global/Head.astro
@@ -150,7 +150,7 @@ const {
 
 <link
     rel="manifest"
-    href="/manifest.webmanifest"
+    href="/manifest.json"
 />
 
 <link
@@ -167,6 +167,10 @@ const {
     rel="apple-touch-icon"
     sizes="180x180"
     href="/favicons/astro-apple-touch.svg"
+/>
+<link
+    rel="manifest"
+    href="/manifest.json"
 />
 <link
     rel="sitemap"
